[package]
name = "rust-padbuster"
version = "0.1.0"
authors = ["Ryar Nyah <ryarnyah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
base64 = "0.12.3"
hex = "0.4.2"

[dev-dependencies]
simple_logger = "1.6.0"
block-modes = "0.5.0"
hex-literal = "0.3.0"
aes = "0.4.0"