[package]
name = "rust-padbuster"
version = "0.0.0"
authors = ["Ryar Nyah <ryarnyah@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "It's a port of python-paddingoracle (https://github.com/mwielgoszewski/python-paddingoracle)"
repository = "https://github.com/ryarnyah/rust-padbuster"
keywords = ["padbuster", "oracle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
base64 = "0.21.0"
hex = "0.4.3"

[dev-dependencies]
simple_logger = "4.1.0"
block-modes = "0.9.1"
hex-literal = "0.4.1"
aes = "0.8.2"
cbc = "0.1.2"
