[package]
name = "rust-padbuster"
version = "0.0.0"
authors = ["Ryar Nyah <ryarnyah@gmail.com>"]
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
description = "It's a port of python-paddingoracle (https://github.com/mwielgoszewski/python-paddingoracle)"
repository = "https://github.com/ryarnyah/rust-padbuster"
keywords = ["padbuster", "oracle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
base64 = "0.22.1"
hex = "0.4.3"

[dev-dependencies]
simple_logger = "5.0.0"
block-modes = "0.9.1"
hex-literal = "1.0.0"
aes = "0.8.4"
cbc = "0.1.2"
